Fix error when backspacing large numbers

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button {
     z-index: 1;
     margin: 3px;
     width: 50px;
-    height: 50px;
+    height: 40px;
     background-color: #ded8d4;
     color: rgb(84, 95, 100);
     font-size: 1.5em;
